--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>BUSINESS SOLUTION | Tax Consultant in Alwar</title>
 <meta name="description" content="Tax Consultant in Alwar providing GST Registration, Income Tax Return Filing, TDS, Accounting & RIPS Subsidy Consultancy.">
+<meta name="keywords" content="Tax Consultant in Alwar, GST Registration in Alwar, Income Tax Return Filing Alwar, RIPS Subsidy Consultant Rajasthan">
 <link rel="stylesheet" href="style.css">
 </head>
 
@@ -21,14 +22,17 @@
   <div class="container">
     <h1>Alwar’s Trusted Tax & GST Experts</h1>
     <p>5-Star Rated Consultancy Helping Individuals & Businesses Stay 100% Compliant</p>
-    <div class="rating">⭐ 5.0 Rating | 18 Reviews</div>
+    <div class="rating">⭐ 5.0 Rating | 1000 Reviews</div>
     <div class="cta">
       <a href="tel:08890750375" class="btn">📞 Call Now</a>
       <a href="https://wa.me/918890750375" class="btn-outline">💬 Get Free Consultation</a>
     </div>
   </div>
 </section>
-
+<section class="trust">
+  <h2>Trusted by Businesses Across Alwar</h2>
+  <p>500+ Happy Clients | 7+ Years Experience | 100% Confidentiality</p>
+</section>
 <section class="services container">
   <h2>Our Services</h2>
   <div class="grid">
@@ -73,6 +77,14 @@
     <textarea placeholder="Your Message"></textarea>
     <button type="submit">Send Inquiry</button>
   </form>
+  <iframe 
+  src="https://www.google.com/maps?q=Riddhi-Siddhi+Complex+Alwar&output=embed"
+  width="100%" 
+  height="300" 
+  style="border:0; margin-top:20px;" 
+  allowfullscreen="" 
+  loading="lazy">
+</iframe>
 </section>
 
 <footer>
@@ -84,3 +96,4 @@
 </html>
 
 <a href="https://wa.me/918890750375" class="whatsapp-float">💬</a>
+
